<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/yellow_700"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_welcome"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txvUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="usuario"
                android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_margin="28dp"
            android:layout_weight="1">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="200dp"
                    android:layout_height="121dp"
                    android:layout_weight="3"
                    android:src="@drawable/blackout1_0" />

                <TextView
                    android:layout_width="223dp"
                    android:layout_height="117dp"
                    android:layout_weight="3"
                    android:text="@string/text_curtain"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="223dp"
                    android:layout_height="20dp"
                    android:layout_weight="3"
                    android:text="@string/text_cost"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="223dp"
                    android:layout_height="20dp"
                    android:layout_weight="3"
                    android:text="$1.700.000 COL"
                    android:textColor="@color/green_200"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_detail_1"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="button1"
                    android:text=">" />

            </LinearLayout>

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="2dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="200dp"
                    android:layout_height="121dp"
                    android:layout_weight="3"
                    android:src="@drawable/imagen_cortina2" />

                <TextView
                    android:layout_width="223dp"
                    android:layout_height="117dp"
                    android:layout_weight="3"
                    android:text="@string/text_curtain2"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="223dp"
                    android:layout_height="20dp"
                    android:layout_weight="3"
                    android:text="@string/text_cost"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="223dp"
                    android:layout_height="20dp"
                    android:layout_weight="3"
                    android:text="US$20.99 x m2"
                    android:textColor="@color/green_200"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_detail_2"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:text=">" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_margin="2dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/img_navidad"
                    android:layout_width="200dp"
                    android:layout_height="121dp"
                    android:layout_weight="3"
                    android:src="@drawable/img_navidad" />

                <TextView
                    android:layout_width="223dp"
                    android:layout_height="117dp"
                    android:layout_weight="3"
                    android:text="@string/text_curtain3"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="223dp"
                    android:layout_height="20dp"
                    android:layout_weight="3"
                    android:text="@string/text_cost"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="223dp"
                    android:layout_height="20dp"
                    android:layout_weight="3"
                    android:text="US$20.99 x m2"
                    android:textColor="@color/green_200"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_detail_3"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=">" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
